VHDLvalue: string support